--- a/SWAI_UI_20200120/UI_presentation_1/UI_presentation_1/SettingTab.storyboard
+++ b/SWAI_UI_20200120/UI_presentation_1/UI_presentation_1/SettingTab.storyboard
@@ -123,15 +123,6 @@
                                 <color key="textColor" red="0.94429987670000004" green="0.97756952050000001" blue="0.9235896468" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="text" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2mS-25-ntK">
-                                <rect key="frame" x="16" y="429" width="343" height="134"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="134" id="l04-9R-hC3"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="22"/>
-                                <color key="textColor" red="0.94429987670000004" green="0.97756952050000001" blue="0.9235896468" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -153,14 +144,13 @@
                     <navigationItem key="navigationItem" id="wcq-HI-rQN">
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="save" id="aKw-bN-dW4">
                             <connections>
-                                <action selector="ageInputSaveButtonClicked:" destination="1Ut-OC-Yaf" id="JtN-45-reJ"/>
+                                <action selector="ageInputSaveButtonClicked:" destination="1Ut-OC-Yaf" id="WiG-al-Boo"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="ageInputSaveButton" destination="aKw-bN-dW4" id="RML-Q7-yKO"/>
                         <outlet property="ageInputTextField" destination="o35-LS-gNb" id="HnN-Dz-hn3"/>
-                        <outlet property="settedUserAgeLabel" destination="2mS-25-ntK" id="Ebk-QR-tRg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A6U-EP-SJx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
